@startuml
'https://plantuml.com/state-diagram

left to right direction

[*] --> Init
Init --> Regs : T = 0
note on link : 시간 기반 변화
Regs --> Vote : T+10일
note on link : 시간 기반 변화
Vote --> Done : T+11일
note on link : 시간 기반 변화
Done --> [*]

note top of Regs : 이 상태에서 등록이 일어난다
note top of Done : 이 상태에서 집계가 일어난다

@enduml